Add BOOT_JVM_OPTIONS and timeout